Add `make repl` rule to day 4 Makefile

--- a/advent-of-code-day-4/Makefile
+++ b/advent-of-code-day-4/Makefile
@@ -10,6 +10,10 @@ dependencies:
 test:
 	bundle exec ruby test/*_test.rb
 
+.PHONY: repl
+repl:
+	bundle exec irb
+
 .PHONY: run
 run:
 	bundle exec ruby lib/main.rb
