--- a/advent-of-code-day-8/package.json
+++ b/advent-of-code-day-8/package.json
@@ -17,5 +17,8 @@
     "karma-babel-preprocessor": "^6.0.1",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4"
+  },
+  "dependencies": {
+    "split": "^1.0.0"
   }
 }
