Fix day 8 so the code can be both tested and run
The PhantomJS runner doesn’t support the Node `require` function I need. But it seems that Node supports enough ES2015 features that I am okay with not using Babel. So I drastically changed around and simplified the project template, pulling from my Ruby project template and the template https://github.com/ainthek/node-boilerplate. Now `make test` and `make run` run without errors on the same codebase.

--- a/advent-of-code-day-8/Makefile
+++ b/advent-of-code-day-8/Makefile
@@ -1,16 +1,15 @@
+.PHONY: all
 all: dependencies test
 
+.PHONY: dependencies
+dependencies:
+	which node npm >/dev/null 2>&1
+	npm install
+
+.PHONY: test
 test:
 	npm test
 
-test-watch:
-	npm run karma
-
+.PHONY: run
 run:
-	node src/kata.js
-
-dependencies:
-	which node npm phantomjs
-	npm install
-
-.PHONY: all dependencies test
+	node src/main.js
