--- a/advent-of-code-day-8/package.json
+++ b/advent-of-code-day-8/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "js-karma-kata-seed",
+  "name": "kata-solution",
+  "main": "src/",
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start --single-run",
-    "karma": "./node_modules/karma/bin/karma start"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kata-seeds/js-karma-seed.git"
+    "url": ""
   },
-  "license": "MIT",
-  "homepage": "https://github.com/kata-seeds/js-karma-seed",
+  "license": "Unlicense",
   "devDependencies": {
-    "babel-preset-es2015": "^6.1.18",
-    "jasmine-core": "^2.2.0",
-    "karma": "^0.12.31",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "mocha": "^2.3.4"
   },
   "dependencies": {
     "split": "^1.0.0"
