Customize the day 10 OCaml project
- add the Jane Street Core library
- add a `.merlin` file for my editor
- delete `.travis.yml` – I won’t be using Travis
- customize the README

--- a/advent-of-code-day-10/Makefile
+++ b/advent-of-code-day-10/Makefile
@@ -11,13 +11,13 @@ COVERAGE_DIR = coverage/
 all: test
 
 $(DIST_BINARY): $(SRC_FILE)
-	ocamlfind ocamlopt -g $(SRC_FILE) -o $(DIST_BINARY)
+	ocamlfind ocamlopt -g -linkpkg -thread -package core $(SRC_FILE) -o $(DIST_BINARY)
 
 run: $(DIST_BINARY)
 	./$(DIST_BINARY)
 
 $(TEST_BINARY): $(SRC_FILE) $(TEST_FILE)
-	ocamlfind ocamlopt -g -package oUnit,bisect -linkpkg -syntax camlp4o $(SRC_FILE) $(TEST_FILE) -o $(TEST_BINARY)
+	ocamlfind ocamlopt -g -package oUnit,bisect,core -linkpkg -thread -syntax camlp4o $(SRC_FILE) $(TEST_FILE) -o $(TEST_BINARY)
 
 test: $(TEST_BINARY)
 	rm -rf bisect*.out $(COVERAGE_DIR)
