Complete day 10 part 1
Including a lot of changes to the build system so it can support multiple files (and thus multiple modules). I also removed the coverage report since it was erroring and I didn’t need it.

I added an extra level of nesting to the tests – which requires only using `>:::` with a list again – so that I could separate my tests from different modules, and have them all run in one test suite.

--- a/advent-of-code-day-10/Makefile
+++ b/advent-of-code-day-10/Makefile
@@ -1,30 +1,33 @@
-MODULE_NAME  = foo
+MAIN_MODULE_NAME = main
+TEST_MODULE_NAME = test
 
-SRC_FILE     = $(MODULE_NAME).ml
-TEST_FILE    = test.ml
+MAIN_SRC_FILE = $(MAIN_MODULE_NAME).ml
+TEST_FILE = $(TEST_MODULE_NAME).ml
 
-DIST_BINARY  = $(MODULE_NAME).out
-TEST_BINARY  = test.out
+MAIN_BINARY = $(MAIN_MODULE_NAME).native
+TEST_BINARY = $(TEST_MODULE_NAME).native
 
-COVERAGE_DIR = coverage/
-
+.PHONY: all
 all: test
 
-$(DIST_BINARY): $(SRC_FILE)
-	ocamlfind ocamlopt -g -linkpkg -thread -package core $(SRC_FILE) -o $(DIST_BINARY)
+# make this phony to force a recompile, since this Makefile doesn't know all of the dependencies - corebuild infers them
+.PHONY: $(MAIN_BINARY)
+$(MAIN_BINARY): $(MAIN_SRC_FILE)
+	corebuild $(MAIN_BINARY)
 
-run: $(DIST_BINARY)
-	./$(DIST_BINARY)
+.PHONY: run
+run: $(MAIN_BINARY)
+	./$(MAIN_BINARY)
 
-$(TEST_BINARY): $(SRC_FILE) $(TEST_FILE)
-	ocamlfind ocamlopt -g -package oUnit,bisect,core -linkpkg -thread -syntax camlp4o $(SRC_FILE) $(TEST_FILE) -o $(TEST_BINARY)
+# make this phony to force a recompile, since this Makefile doesn't know all of the dependencies - corebuild infers them
+.PHONY: $(TEST_BINARY)
+$(TEST_BINARY): $(MAIN_SRC_FILE) $(TEST_FILE)
+	corebuild -package oUnit $(TEST_BINARY)
 
+.PHONY: test
 test: $(TEST_BINARY)
-	rm -rf bisect*.out $(COVERAGE_DIR)
 	./$(TEST_BINARY)
-	bisect-report bisect0001.out -html $(COVERAGE_DIR)
 
+.PHONY: clean
 clean:
-	rm -rf *.cache *.cm* *.log *.o *.out $(DIST_BINARY) $(TEST_BINARY) $(COVERAGE_DIR)
-
-.PHONY: all, run, test, clean
+	rm -rf *.cache *.cm* *.log *.o *.out $(MAIN_BINARY) $(TEST_BINARY)
