Improve day 10 OCaml project layout, build system
I moved the code into src/ and test/ folders. As well as allowing the code to be browsed separately from other project files, it allows me to change the Makefile to only build targets when their dependencies are out of date, instead of all the time like I was forced to do before. I removed some out-of-date arguments from the `clean` target in the Makefile, too.

I also simplified the main program to remove the commented-out alternative for day 2. I think it’s such a trivial change that both possible versions of the program don’t need to be referenced in the code.

--- a/advent-of-code-day-10/Makefile
+++ b/advent-of-code-day-10/Makefile
@@ -1,28 +1,18 @@
-MAIN_MODULE_NAME = main
-TEST_MODULE_NAME = test
+MAIN_BINARY = main.native
+TEST_BINARY = test.native
 
-MAIN_SRC_FILE = $(MAIN_MODULE_NAME).ml
-TEST_FILE = $(TEST_MODULE_NAME).ml
+.PHONY: default
+default: test
 
-MAIN_BINARY = $(MAIN_MODULE_NAME).native
-TEST_BINARY = $(TEST_MODULE_NAME).native
-
-.PHONY: all
-all: test
-
-# make this phony to force a recompile, since this Makefile doesn't know all of the dependencies - corebuild infers them
-.PHONY: $(MAIN_BINARY)
-$(MAIN_BINARY): $(MAIN_SRC_FILE)
-	corebuild $(MAIN_BINARY)
+$(MAIN_BINARY): src/*
+	corebuild src/$(MAIN_BINARY)
 
 .PHONY: run
-run: $(MAIN_BINARY)
+run: $(MAIN_BINARY) src/*
 	./$(MAIN_BINARY)
 
-# make this phony to force a recompile, since this Makefile doesn't know all of the dependencies - corebuild infers them
-.PHONY: $(TEST_BINARY)
-$(TEST_BINARY): $(MAIN_SRC_FILE) $(TEST_FILE)
-	corebuild -package oUnit $(TEST_BINARY)
+$(TEST_BINARY): test/* src/*
+	corebuild -package oUnit -I src/ test/$(TEST_BINARY)
 
 .PHONY: test
 test: $(TEST_BINARY)
@@ -30,4 +20,4 @@ test: $(TEST_BINARY)
 
 .PHONY: clean
 clean:
-	rm -rf *.cache *.cm* *.log *.o *.out $(MAIN_BINARY) $(TEST_BINARY)
+	rm -rf _build/ $(MAIN_BINARY) $(TEST_BINARY)
